--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   "author": "Florian Graff",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
     "tsc-watch": "^6.1.0",
     "typescript": "^5.4.3"
   }
